--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <h1> TOPIC OF MY SITE </h1>
     <ul>
     <li><a href="index.html"> home </a></li>
-    <li><a href="nameofmy"> ABOUT </a></li>
+    <li><a href="Page2.html"> ABOUT </a></li>
     <li><a href="noun.html"> noun  </a></li>
     <li><a href="https://www.powayusd.com/en-US/Schools/HS/WVHS/HOME"> WESTVIEW </a></li>
   </ul>
