--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
-  
+   <head>
+    <title> Noah Crowther's Website> </title>
+    
+  </head>
   <body>
     
     <h1> TOPIC OF MY SITE </h1>
